# scrapedatshi-py

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scrapedatshi/: __init__.py  _domain_utils.py  _file_parser.py  auth.py  cli.py  client.py  exceptions.py  models.py  pipeline.py
scrapedatshi/_templates/: __init__.py  _env.py  _examples.py
scrapedatshi/pipeline/: __init__.py  _chunk.py  _crawl_helpers.py  _extract.py  _ingest.py  _ingest_helpers.py  _namespace.py  _pdf.py  _query.py  _sync.py
tests/: test_client.py
