[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapedatshi"
version = "0.12.2"
description = "Official Python SDK for the scrapedatshi RAG pipeline API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "scrapedatshi", email = "dev@scrapedatshi.com" }]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "scraping",
    "chunking",
    "embeddings",
    "vector-database",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "pydantic>=2.0.0", "pdfplumber>=0.10.0"]

[project.scripts]
scrapedatshi = "scrapedatshi.cli:main"

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0"]
docx = ["python-docx>=1.0.0"]
all-parsers = ["openpyxl>=3.1.0", "python-docx>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",   # httpx mock transport for tests
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://scrapedatshi.com"
Documentation = "https://docs.scrapedatshi.com/sdk/python"
Repository = "https://github.com/scrapedatshi/scrapedatshi-py"
"Bug Tracker" = "https://github.com/scrapedatshi/scrapedatshi-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["scrapedatshi"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
